# ai_oscp_neuro

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: clean-notebooks.yml
data/: capstone_crossscale.csv  capstone_error_types.csv  h1h0_area_layer_profiles.csv  h1h0_laminar_profiles.csv
data/sidecars/: channels_830794_2026-01-26-12-02-05.parquet  channels_830794_2026-01-27-11-25-31.parquet  channels_830795_2026-02-24-15-08-59.parquet  channels_830846_2026-03-09-10-32-54.parquet  channels_830847_2026-03-10-16-32-25.parquet  channels_830847_2026-03-11-15-46-40.parquet  channels_830848_2026-03-02-15-05-26.parquet  channels_830848_2026-03-03-14-02-09.parquet  channels_830848_2026-03-05-16-07-50.parquet  channels_830849_2026-03-07-09-48-16.parquet  channels_830851_2026-03-18-10-24-59.parquet  channels_830851_2026-03-19-10-49-11.parquet  (+27 more)
docs/: oddball_analysis_plan.md
notebooks/: ccf_penetration_figures.ipynb  crossscale_oddball_index.ipynb  crossscale_timescales.ipynb  crosstechnique_corrections.ipynb  direction_tuning_three_modalities.ipynb  duration_mismatch_ecephys.ipynb  h1h0_shared_substrate_ecephys.ipynb  oddball_confirmatory_ecephys.ipynb  oddball_prediction_error_ecephys.ipynb  omission_crossscale.ipynb  orientation_tuning_three_modalities.ipynb  rf_sanity_check_three_modalities.ipynb  sensorimotor_mismatch_ecephys.ipynb  sequence_mismatch_ecephys.ipynb  subsample_tuning_balanced.ipynb
openscope_ccf/: __init__.py  ccf.py  figures.py  nwbio.py  sidecar.py
scripts/: build_all.py  clean_notebook.py
(+23 files in other folders)
